[package]
name = "input"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20", features = ["csr"] }
stylist = { version = "0.12.0", features = ["yew"]}
gloo = "0.8.0"
wasm-bindgen = "0.2.79"
web-sys = { version = "0.3.56", features = ["HtmlInputElement"] }
